--- a/CodeRunner.Warp4.CustomFunction/CodeRunner.Warp4.CustomFunction.csproj
+++ b/CodeRunner.Warp4.CustomFunction/CodeRunner.Warp4.CustomFunction.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="1.1.3" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
+    <PackageReference Include="Amazon.Lambda.S3Events" Version="1.0.2" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.4.0" />
   </ItemGroup>
 
